# ansible-role-acme-certificate-route53

./: .ansible-lint  .ansible-lint-ignore  .gitignore  .talismanrc  .travis.yml  .yamllint  Makefile  README.md  pyproject.toml  requirements.yml
.github/workflows/: lint.yml  main.yml  molecule.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
molecule/default/tests/: test_default.py
tasks/: main.yml
vars/: Debian.yml  RedHat.yml
