[tool.poetry]
name = "nephelaiio-acme-certificate-route53"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ansible = "^8.5.0"
ansible-lint = { version = "^6.21.1", markers = "platform_system != 'Windows'" }
yamllint = "^1.32.0"
netaddr = "^0.9.0"
molecule-docker = "^2.1.0"
molecule = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
